Fix automatic Publisher proxy setup and validate JDBC connections